# the_modern_cpp_challenge

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Dockerfile  LICENSE  README.md  vcpkg.json
benchmark/: CMakeLists.txt  benchmark.h  main.cpp
benchmark/chapter_01_math/: CMakeLists.txt  benchmark.h  problem_008_armstrong_numbers.cpp  problem_008_armstrong_numbers.h  problem_011_converting_numerical_values_to_roman.cpp  problem_011_converting_numerical_values_to_roman.h  problem_012_longest_collatz_sequence.cpp  problem_012_longest_collatz_sequence.h
benchmark/chapter_07_concurrency/: CMakeLists.txt  benchmark.h  parallel_minmax.h  problem_061_parallel_transform_algorithm.cpp  problem_061_parallel_transform_algorithm.h  problem_062_parallel_minmax_with_threads.cpp  problem_062_parallel_minmax_with_threads.h  problem_063_parallel_minmax_with_async.cpp  problem_063_parallel_minmax_with_async.h  problem_064_parallel_sort_algorithm.cpp  problem_064_parallel_sort_algorithm.h
src/: CMakeLists.txt  main.cpp  problems.h
src/chapter_01_math/: CMakeLists.txt  digits.h  math.h  problem_001_sum_of_naturals_divisible_by_3_and_5.cpp  problem_001_sum_of_naturals_divisible_by_3_and_5.h  problem_001_sum_of_naturals_divisible_by_3_or_5.cpp  problem_001_sum_of_naturals_divisible_by_3_or_5.h  problem_002_greatest_common_divisor.cpp  problem_002_greatest_common_divisor.h  problem_003_least_common_multiple.cpp  problem_003_least_common_multiple.h  problem_004_largest_prime_smaller_than_given_number.cpp  problem_005_sexy_prime_pairs.cpp  problem_005_sexy_prime_pairs.h  problem_006_abundant_numbers.cpp  problem_007_amicable_numbers.cpp  problem_008_armstrong_numbers.cpp  problem_008_armstrong_numbers.h  problem_009_prime_factors.cpp  problem_009_prime_factors.h  problem_010_gray_code.cpp  problem_011_converting_numerical_values_to_roman.cpp  problem_011_converting_numerical_values_to_roman.h  problem_012_largest_collatz_sequence.cpp  problem_012_largest_collatz_sequence.h  problem_012_longest_collatz_sequence.cpp  problem_013_computing_the_value_of_pi.cpp  problem_014_validating_isbns.cpp  problems.h
src/chapter_02_language_features/: CMakeLists.txt  ipv4.cpp  problem_015_ipv4_data_type.cpp  problem_016_enumerating_ipv4_addresses_in_a_range.cpp  problem_017_array_2d.cpp  problem_018_variadic_minimum_function.cpp  problem_019_adding_a_range_of_values_to_a_container.cpp  problem_020_contains_any_all_or_none_from_a_range.cpp  problem_021_system_handle_wrapper.cpp  problem_022_temperature_scales_literals.cpp  unique_hdl.cpp
src/chapter_03_strings_and_regular_expressions/: CMakeLists.txt  problem_023_binary_to_string_conversion.cpp  problem_024_string_to_binary_conversion.cpp  problem_025_capitalizing_an_article_title.cpp  problem_026_joining_strings_with_delimiter.cpp  problem_027_splitting_a_string_into_tokens.cpp  problem_028_longest_palindromic_substring.cpp  problem_029_license_plate_validation.cpp  problem_030_extracting_url_parts.cpp  problem_031_transforming_dates_in_strings.cpp
src/chapter_04_streams_and_filesystems/: CMakeLists.txt  problem_032_pascal_triangle.cpp  problem_033_tabular_printing_of_a_list_of_processes.cpp  problem_034_removing_empty_lines_from_a_text_file.cpp  problem_035_computing_the_size_of_a_directory.cpp  problem_036_deleting_files_older_than_a_given_date.cpp  problem_037_regex_find_files_in_a_directory.cpp  problem_038_temporary_log_files.cpp
src/chapter_05_date_and_time/: CMakeLists.txt  problem_039_measuring_function_execution_time.cpp  problem_040_number_of_days_between_two_dates.cpp  problem_041_day_of_the_week.cpp  problem_042_day_and_week_of_the_year.cpp  problem_043_meeting_time_for_multiple_time_zones.cpp  problem_044_monthly_calendar.cpp
src/chapter_06_algorithms_and_data_structures/: CMakeLists.txt  problem_045_priority_queue.cpp  problem_046_circular_buffer.cpp  problem_047_double_buffer.cpp  problem_048_most_frequent_element_in_a_range.cpp  problem_049_text_histogram.cpp  problem_050_filtering_a_list_of_phone_numbers.cpp  problem_051_transforming_a_list_of_phone_numbers.cpp  problem_052_generating_all_the_permutations_of_a_string.cpp  problem_053_average_rating_of_movies.cpp  problem_054_pairwise_algorithm.cpp  problem_055_zip_algorithm.cpp  problem_056_select_algorithm.cpp  problem_057_quicksort.cpp  problem_058_shortest_path_between_two_nodes.cpp  problem_059_weasel_program.cpp  problem_060_game_of_life.cpp
src/chapter_07_concurrency/: CMakeLists.txt  parallel_minmax.h  problem_061_parallel_transform_algorithm.cpp  problem_062_parallel_minmax_with_threads.cpp  problem_063_parallel_minmax_with_async.cpp  problem_064_parallel_sort_algorithm.cpp  problem_065_thread_safe_logging.cpp  problem_066_customer_service_system.cpp
src/chapter_08_design_patterns/: CMakeLists.txt  problem_067_validating_passwords.cpp  problem_068_generating_random_passwords.cpp  problem_069_generating_social_security_numbers.cpp  problem_070_approval_system.cpp  problem_071_observable_vector_container.cpp  problem_072_computing_order_price_with_discounts.cpp
src/chapter_09_data_serialization/: CMakeLists.txt  movies_samples.cpp  pdf_images.cpp  pdf_movies.cpp  problem_073_xml_serialization.cpp  problem_074_using_xpath.cpp  problem_075_json_serialization.cpp  problem_076_json_deserialization.cpp  problem_077_printing_a_list_of_movies_to_a_pdf.cpp  problem_078_creating_a_pdf_from_a_collection_of_images.cpp
src/chapter_10_archives_images_and_databases/: CMakeLists.txt  command_line_movies.cpp  problem_079_finding_files_in_a_zip_archive.cpp  problem_080_zip_compression.cpp  problem_081_zip_compression_with_password.cpp  problem_082_national_flag_png.cpp  problem_083_verification_text_png.cpp  problem_084_ean_13_barcode_generator.cpp  problem_085_reading_from_an_sqlite_db.cpp  problem_086_inserting_into_an_sqlite_db.cpp  problem_087_handling_images_in_an_sqlite_db.cpp
src/chapter_11_cryptography/: CMakeLists.txt  problem_088_caesar_cipher.cpp  problem_089_vigenere_cipher.cpp  problem_090_base64_encoding.cpp  vigenere.cpp  (+4 more)
test/: CMakeLists.txt  main.cpp
(+424 files in other folders)
